--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                 </div>
                 <div class="contact-card">
                     <h3>💼 LinkedIn</h3>
-                    <p>www.linkedin.com/in/gilad-gonen</p>
+                    <p>linkedin.ca/in/gilad-gonen</p>
                 </div>
                 <div class="contact-card">
                     <h3>📍 Location</h3>
