--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,7 @@ body {
 </head>
 <body>
     <div class="ai-notice">
-        <strong>Note: </strong> I am Gilad Gonen. I built this with GenAI — not because I had to, but because I could. Welcome to a sharper way to read a CV.
+        <strong>"G.GenAi's portfolio — where experience meets innovation."<strong>
 
     </div>
 
