--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gilad Gonen - Senior Project Manager & Projects Director</title>
     <meta name="description" content="Gilad Gonen - Senior Project Manager specializing in large-scale civil construction projects. 10+ years experience, $450M+ projects delivered.">
     <style>
-        /* AI Experiment Notice */
+        /* AI1 Experiment Notice */
 .ai-notice {
     background: linear-gradient(135deg, #5C6BC0, #3949AB); /* linear-gradient(135deg, #f39c12, #e67e22);*/
     color: white;
