--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@ body {
                             </div>
                             <div class="contact-item">
                                 <span>📱</span>
-                                <span>+613-794-2115</span>
+                                <span><a href="tel:+16137942115">+613-794-2115</a></span>
                             </div>
                         </div>
                     </div>
@@ -1535,7 +1535,7 @@ body {
                 
                 <div class="contact-card">
                     <h3>📍 Location</h3>
-                    <p>Ottawa, Ontario, Canada</p>
+                    <p><a href="tel:+16137942115">Ottawa, Ontario, Canada</a></p>
                     <p>Canadian Permanent Resident, based in Ottawa</p>
                 </div>
                 
